# lib-permissions

./: .gitignore  Cargo.toml  README.md  build.rs  javascript.js  node.js  package.json  permissions.json  permissions.yaml  process.js
src/: lib.rs
tests/: loads_from_gen.rs
