[package]
name = "lib_permissions"
version = "0.1.3"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
license = "GPL-3.0"
build = "build.rs"

[lib]
name = "lib_permissions"
doctest = false				# these annoy me
path = "src/lib.rs"

[dependencies]
serde = "1.0.8"
serde_derive = "1.0.8"

[build-dependencies]
regex = "0.1.77"
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"


